Updated parameters passing to salesforce logic. Add components to index.html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,21 @@
 
 
 <div>
+  <h1>userInfo</h1>
   <p>{{userInfo | json}}</p>
+  <h1>saveDefaultCurrency</h1>
   <p>{{saveDefaultCurrencyResp | json}}</p>
+  <h1>getFilteredClaimLines</h1>
   <p>{{getFilteredClaimLinesResp | json}}</p>
-  <p>Change></p>
+  <h1>getFilterClients</h1>
+  <p>{{getFilterClientsResp | json}}</p>
+  <h1>getTopFinancialIssuersData</h1>
+  <p>{{getTopFinancialIssuersDataResp | json}}</p>
+  <h1>getClaimLinesAmountsByStatus</h1>
+  <p>{{getClaimLinesAmountsByStatusResp | json}}</p>
+  <h1>getClaimLinesAmountsByType</h1>
+  <p>{{getClaimLinesAmountsByTypeResp | json}}</p>
+  <h1>getTopClaimLinesAmountByCountry</h1>
+  <p>{{getTopClaimLinesAmountByCountryResp | json}}</p>
 </div>
 
